# ArrayFire-TPCDI

./: .gitignore  AFCSVParser.cpp  AFDataFrame.cpp  AFDataFrame.h  AFParser.cpp  AFParser.hpp  AFTypes.h  BatchFunctions.cpp  BatchFunctions.h  CMakeLists.txt  CSVObject.cpp  CSVObject.hpp  Column.cpp  Column.h  Enums.h  FindITT.cmake  FinwireParser.cpp  FinwireParser.h  Logger.cpp  Logger.h  RapidxmlTest.cpp  RapidxmlTest.hpp  TPCDI_Utils.cpp  TPCDI_Utils.h  TPC_DI.cpp  TPC_DI.h  Tests.cpp  Tests.h  Utils.cpp  Utils.hpp  XMLFlattener.cpp  XMLFlattener.h  main.cpp  run.sh~
ArrayFireExample/: AFCSVParser.cpp  AFCSVParser.hpp  AFTest.cpp  AFTest.hpp  CSVObject.cpp  CSVObject.hpp  Utils.cpp  Utils.hpp  main.cpp
ArrayFireExample.xcodeproj/: project.pbxproj
ArrayFireExample.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ArrayFireExample.xcodeproj/xcuserdata/bryanwong.xcuserdatad/xcschemes/: xcschememanagement.plist
CPU/: vector_functions.h
CUDA/: cuda_kernels.h
OpenCL/: opencl_helper.h  opencl_kernels.cl  opencl_kernels.h  opencl_parsers.cl  opencl_parsers.h
include/: AFDataFrame.cpp  AFDataFrame.h  AFHashTable.h  AFParser.cpp  AFParser.h  AFParser.hpp  AFTypes.h  BatchFunctions.h  Column.cpp  Column.h  ColumnNames.h  Enums.h  FinwireParser.cpp  FinwireParser.h  KernelInterface.h  KernelLauncher.h  Kernels.h  Logger.h  TPCDI.h  TPCDI_Utils.h  TPC_DI.cpp  TPC_DI.h  Tests.cpp  Tests.h  Utils.h
include/CPU/: single_threaded.h  vector_functions.h
include/CUDA/: cuda_kernels.h
include/OpenCL/: opencl_helper.h  opencl_kernels.cl  opencl_kernels.h  opencl_parsers.cl  opencl_parsers.h  opencl_single_use.cl
src/: AFDataFrame.cpp  AFHashTable.cpp  AFParser.cpp  BatchFunctions.cpp  Column.cpp  FinwireParser.cpp  Logger.cpp  TPCDI.cpp  TPCDI_Utils.cpp  TPC_DI.cpp  Tests.cpp  Utils.cpp  main.cpp
src/Kernels/: CPUSingleThreaded.cpp  CUDAKernels.cu  KernelInterface.cpp  OpenCLKernels.cpp  kernels.cl
